# gvk

./: .gitignore  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  INTERNAL-VERSION.txt  LICENSE.txt  README.md  RELEASE-NOTES.md  SECURITY.md  THIRD-PARTY-PROGRAMS.txt
cmake/: SPIRV-Cross.cmake  SPIRV-Headers.cmake  SPIRV-Tools.cmake  Vulkan.cmake  VulkanMemoryAllocator.cmake  asio.cmake  cereal.cmake  glfw.cmake  glm.cmake  glslang.cmake  googletest.cmake  gvk-layer.def.in  gvk-layer.json.in  gvk-layer.rc.in  gvk-target.config.cmake.in  gvk.build.cmake  gvk.config.cmake.in  imgui.cmake  stb.cmake  tinyxml2.cmake
documentation/: Doxyfile  README.md
gvk/: CMakeLists.txt
gvk-command-structures/: CMakeLists.txt
gvk-command-structures/generator/: execute-command-structure.generator.hpp  main.cpp
gvk-command-structures/include/: gvk-command-structures.hpp
gvk-cppgen/: CMakeLists.txt
gvk-cppgen/include/: gvk-cppgen.hpp
gvk-format-info/: CMakeLists.txt
gvk-format-info/generator/: enumerate-formats.generator.hpp  get-format-info.generator.hpp  main.cpp
gvk-format-info/include/: gvk-format-info.hpp
gvk-format-info/source/: gvk-format-info.cpp
gvk-format-info/tests/: format-info.tests.cpp
gvk-gui/: CMakeLists.txt
gvk-gui/include/: gvk-gui.hpp
gvk-handles/: CMakeLists.txt
gvk-handles/generator/: handles.generator.hpp  main.cpp
gvk-handles/include/: gvk-handles.hpp
gvk-handles/tests/: render-target.tests.cpp
gvk-layer/: CMakeLists.txt
gvk-layer/generator/: basic-layer.generator.hpp  layer-hooks.generator.hpp  main.cpp
gvk-layer/include/: gvk-layer.hpp
gvk-math/: CMakeLists.txt
gvk-math/include/: gvk-math.hpp
gvk-reference/: CMakeLists.txt
gvk-reference/include/: gvk-reference.hpp
gvk-reference/tests/: reference.tests.cpp
gvk-restore-info/: CMakeLists.txt
gvk-restore-info/generator/: main.cpp
gvk-restore-info/include/: gvk-restore-info.hpp
gvk-restore-point/: CMakeLists.txt
gvk-restore-point/generator/: applier-process-command-buffer.generator.hpp  apply-command-buffer-restore-point.generator.hpp  basic-applier.generator.hpp  basic-creator.generator.hpp  basic-layer.generator.hpp  basic-restore-point-applier.generator.hpp  basic-restore-point-creator.generator.hpp  create-command-buffer-restore-point.generator.hpp  creator-process-command-buffer.generator.hpp  main.cpp  update-structure-handles.generator.hpp
gvk-restore-point/include/: VK_LAYER_INTEL_gvk_restore_point.h  VK_LAYER_INTEL_gvk_restore_point.hpp  gvk-restore-point.hpp
gvk-runtime/: CMakeLists.txt  gvk-windows-layer-registry.ps1
gvk-runtime/generator/: dispatch-table.generator.hpp  main.cpp
gvk-runtime/include/: gvk-defines.hpp  gvk-dispatch-table.hpp  gvk-environment.hpp  gvk-runtime.hpp
gvk-runtime/source/: gvk-defines.cpp  gvk-environment.cpp  gvk-runtime.cpp
gvk-spirv/: CMakeLists.txt
gvk-spirv/include/: gvk-spirv.hpp
gvk-spirv/tests/: context.tests.cpp  raytracing.tests.cpp  spirv-test-utilities.hpp
gvk-state-tracker/: CMakeLists.txt
gvk-state-tracker/generator/: basic-cmd-tracker.generator.hpp  basic-state-tracker.generator.hpp  enumerate-state-tracked-objects.generator.hpp  get-state-tracked-object-create-info.generator.hpp  get-state-tracked-object-info.generator.hpp  main.cpp  set-state-tracked-object-name.generator.hpp  state-tracked-handles.generator.hpp
gvk-state-tracker/include/: VK_LAYER_INTEL_gvk_state_tracker.h  VK_LAYER_INTEL_gvk_state_tracker.hpp
gvk-state-tracker/tests/: command-buffer.tests.cpp  descriptor-set.tests.cpp  device-memory-binding.tests.cpp  image-layout.tests.cpp  pipeline.tests.cpp  state-tracker-test-utilities.cpp  state-tracker-test-utilities.hpp  swapchain.tests.cpp
gvk-string/: CMakeLists.txt
gvk-string/include/: gvk-string.hpp
gvk-string/tests/: printer.tests.cpp  string.tests.cpp  utilities.tests.cpp
gvk-structures/: CMakeLists.txt
gvk-structures/generator/: cerealize-pnext.generator.hpp  create-pnext-copy.generator.hpp  decerealize-pnext.generator.hpp  destroy-pnext-copy.generator.hpp  enumerate-pnext-handles.generator.hpp  get-object-type.generator.hpp  handle-to-string.generator.hpp  main.cpp  pnext-to-string.generator.hpp  pnext-tuple-element-wrapper.generator.hpp
gvk-structures/include/: gvk-structures.hpp
gvk-structures/tests/: comparison-operator.tests.cpp  copy.tests.cpp  handle-enumeration.tests.cpp  serialization.tests.cpp  to-string.tests.cpp  validate-structure-serialization.hpp  validation-allocator.hpp
gvk-system/: CMakeLists.txt
gvk-system/include/: gvk-system.hpp
gvk-system/tests/: random.tests.cpp
gvk-virtual-swapchain/: CMakeLists.txt
gvk-xml/: CMakeLists.txt  gvk-xml-to-json.cpp  gvk.xml-to-json.cpp
gvk-xml/include/: gvk-xml.hpp
gvk/generator/: cerealize-structures.generator.hpp  comparison-operators.generator.hpp  cppgen-utilities.hpp  create-structure-copy.generator.hpp  decerealize-structures.generator.hpp  deserialize-structures.generator.hpp  destroy-structure-copy.generator.hpp  dispatch-table.generator.hpp  enum-to-string.generator.hpp  enumerate-formats.generator.hpp  format-utilities.generator.hpp  forward-declarations.generator.hpp  get-stype.generator.hpp  handle-to-string.generator.hpp  handles.generator.hpp  main.cpp  make-tuple.generator.hpp  serialize-structures.generator.hpp  structure-to-string.generator.hpp
gvk/tests/: comparison-operator.tests.cpp  reference.tests.cpp  render-target.tests.cpp  spir-v.tests.cpp  structure-copy.tests.cpp  structure-serialization.tests.cpp  (+1 more)
samples/: CMakeLists.txt  getting-started-00-triangle.cpp  getting-started-01-mesh.cpp  getting-started-02-uniform-buffer.cpp  getting-started-03-texture-mapping.cpp  getting-started-04-render-target.cpp  gvk-getting-started-00-triangle.cpp  gvk-getting-started-01-mesh.cpp  gvk-getting-started-02-uniform-buffer.cpp  gvk-getting-started-03-texture-mapping.cpp  gvk-getting-started-04-render-target.cpp  gvk-getting-started-05-gui.cpp  gvk-log-parser.cpp  gvk-sample-entry-points.cpp  gvk-sample-entry-points.hpp  gvk-sample-layer.cpp  gvk-sample-png.hpp  gvk-sample-utilities.hpp
(+287 files in other folders)
